--- a/superblocks.yaml
+++ b/superblocks.yaml
@@ -4,6 +4,9 @@ jobs:
     image: node
     script:
       - npm install truffle
+      - npm install truffle-assertions
+      - npm install truffle-hdwallet-provider
+      - npm install chalk
       - npx truffle compile
   test:
     image: node
