--- a/superblocks.yaml
+++ b/superblocks.yaml
@@ -12,6 +12,9 @@ jobs:
     image: node
     script:
       - npm install truffle
+      - npm install truffle-assertions
+      - npm install truffle-hdwallet-provider
+      - npm install chalk
       - npx truffle test
 stages:
   - pipeline:
