--- a/superblocks.yaml
+++ b/superblocks.yaml
@@ -11,9 +11,9 @@ jobs:
   test:
     image: node
     script:
-      - npm install truffle
       - npm install ganache-cli
-      - ganache-cli &
+      - ganache-cli
+      - npm install truffle
       - npm install truffle-assertions
       - npm install truffle-hdwallet-provider
       - npm install chalk
